fixed overflow on detail and edit pages

--- a/src/frontend-admin/src/components/pages/HardwareDetailPage/HardwareDetailPage.module.css
+++ b/src/frontend-admin/src/components/pages/HardwareDetailPage/HardwareDetailPage.module.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    min-width: fit-content;
 }
 
 .firstColumn {
